--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/05/2020 02:39:00 AM</p>
+    <p class="lastupdate">09/05/2020 02:44:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">67.5&#176;F</td>
+        <td class="data">67.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">67.5&#176;F</td>
+        <td class="data">67.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">67.5&#176;F</td>
+        <td class="data">67.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.8&#176;F</td>
+        <td class="data">51.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">55%</td>
+        <td class="data">56%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.920 inHg (-0.005)</td>
+        <td class="data">29.924 inHg (-0.004)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph N (0&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -90,7 +90,7 @@
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">39%</td>
+        <td class="data">40%</td>
       </tr>
     </tbody>
   </table>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             75.3</span><br/>
-          <span title="02:38:15 AM">
-            67.4</span>
+          <span title="02:43:23 AM">
+            67.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:41:52 PM (Friday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="02:38:15 AM" class="loval">
-            67.4</span>
+          <span title="02:43:23 AM" class="loval">
+            67.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:16 AM (Sunday)" class="loval">
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="02:33:55 AM">
-            55</span><br/>
+          <span title="02:42:29 AM">
+            56</span><br/>
           <span title="12:00:01 AM">
             42</span>
         </td>
@@ -505,8 +505,8 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="01:04:01 AM">
-            39</span><br/>
+          <span title="02:40:01 AM">
+            40</span><br/>
           <span title="12:00:01 AM">
             38</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 11 hours, 52 minutes</td>
+      <td class="data">3 days, 11 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 11 hours, 52 minutes</td>
+      <td class="data">3 days, 11 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
