--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/05/2020 02:59:00 AM</p>
+    <p class="lastupdate">09/05/2020 03:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">66.7&#176;F</td>
+        <td class="data">66.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">66.7&#176;F</td>
+        <td class="data">66.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">66.7&#176;F</td>
+        <td class="data">66.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.0&#176;F</td>
+        <td class="data">50.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.922 inHg (-0.006)</td>
+        <td class="data">29.924 inHg (-0.004)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph N (0&#176;)</td>
+        <td class="data">1 mph WNW (292&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">78.9&#176;F</td>
+        <td class="data">78.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">40%</td>
+        <td class="data">39%</td>
       </tr>
     </tbody>
   </table>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             75.3</span><br/>
-          <span title="02:57:13 AM">
-            66.7</span>
+          <span title="03:02:41 AM">
+            66.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:41:52 PM (Friday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="02:57:13 AM" class="loval">
-            66.7</span>
+          <span title="03:02:41 AM" class="loval">
+            66.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:16 AM (Sunday)" class="loval">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 12 hours, 12 minutes</td>
+      <td class="data">3 days, 12 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 12 hours, 12 minutes</td>
+      <td class="data">3 days, 12 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
