--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/05/2020 03:39:00 AM</p>
+    <p class="lastupdate">09/05/2020 03:44:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">65.6&#176;F</td>
+        <td class="data">65.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">65.6&#176;F</td>
+        <td class="data">65.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">65.6&#176;F</td>
+        <td class="data">65.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.9&#176;F</td>
+        <td class="data">50.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.918 inHg (-0.012)</td>
+        <td class="data">29.919 inHg (-0.011)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph WNW (292&#176;)</td>
+        <td class="data">1 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">76.5&#176;F</td>
+        <td class="data">76.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -119,7 +119,7 @@
         <tr>
           <td class="label">Moon Phase</td>
           <td class="data">Waning gibbous<br/>
-            93%</td>
+            92%</td>
         </tr>
       </table>
     </div>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             75.3</span><br/>
-          <span title="03:34:27 AM">
-            65.6</span>
+          <span title="03:43:19 AM">
+            65.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:41:52 PM (Friday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="03:34:27 AM" class="loval">
-            65.6</span>
+          <span title="03:43:19 AM" class="loval">
+            65.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:16 AM (Sunday)" class="loval">
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="03:26:01 AM">
-            59</span><br/>
+          <span title="03:42:15 AM">
+            60</span><br/>
           <span title="12:00:01 AM">
             42</span>
         </td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           2<br/>
-          7
+          6
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 12 hours, 52 minutes</td>
+      <td class="data">3 days, 12 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 12 hours, 52 minutes</td>
+      <td class="data">3 days, 12 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
